# action-center

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-linux.yml
include/Config/: ConfigLoader.hpp
include/UI/: ButtonModule.hpp  Component.hpp  ContainerModule.hpp  SliderModule.hpp  ToggleModule.hpp  Window.hpp
src/: ActionBar.cpp  CMakeLists.txt  main.cpp
src/Config/: ConfigLoader.cpp
src/UI/: ButtonModule.cpp  Component.cpp  ContainerModule.cpp  SliderModule.cpp  ToggleModule.cpp  Window.cpp
tests/: CMakeLists.txt
tests/configs/: simple.json
